--- a/nobel-app/public/stylesheets/style.css
+++ b/nobel-app/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+table {
+  border: 1px solid black;
+}
+
+td {
+  border: 1px solid black;
+  padding: 5px 15px 5px 15px;
+  text-align: center;
+}
